--- a/publications.html
+++ b/publications.html
@@ -167,7 +167,7 @@
                         [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
                      </p>
                      <br>
-                     <p> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>I24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
+                     <p> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
                         [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
                      </p>
                      <br>
