--- a/career.html
+++ b/career.html
@@ -64,7 +64,7 @@
                            <p>At Intel Labs, Intel Corporation, Mexico</p>
                            </p>
                            <div class="parent">
-                              <p class="text-muted">
+                              <p class="text-muted" align="justify">
 I was in charge of the development and deployment of algorithms for online trajectory planning and robust tracking control on palm-sized quadcopters. My work involved utilizing both constrained embedded systems and high-performance computing units equipped with state-of-the-art hardware accelerators for computer vision and machine learning. Through my efforts, I was able to achieve a significant impact in the field, as evidenced by my receipt of the Hi5 Award four times over the course of three years and the filing of 23 successful patent applications.
                               </p>
                            </div>
@@ -89,7 +89,7 @@ I was in charge of the development and deployment of algorithms for online traje
                            <p>Freescale Semiconductor, Mexico.</p>
                            </p>
                            <div class="parent">
-                              <p class="text-muted">
+                              <p class="text-muted" align="justify">
 At Freescale, I was responsible for the creation of various reference designs for Bluetooth Low Energy technology utilizing Freescale's hardware platforms and software stacks. These designs were highly versatile and could be applied across a range of industries, including wearables, healthcare, and smart car applications. 
                               </p>
                            </div>
@@ -114,7 +114,7 @@ At Freescale, I was responsible for the creation of various reference designs fo
                            <p>Western Institute of Technology and Higher Education (ITESO)</p>
                            </p>
                            <div class="parent">
-                              <p class="text-muted">
+                              <p class="text-muted" align="justify">
                                  As a member of the research team, I was honored to work with <a  class="several" href="https://iteso.mx/web/general/detalle?group_id=3084565">Dr. Omar Longoria</a> on the design of a cutting-edge Gaussian Frequency Shift Keying (GFSK) demodulator for Bluetooth technology. This was a challenging and intellectually stimulating project that required us to delve into advanced techniques for demodulation and rigorously evaluate the performance of various design options. Our contributions to the field were validated by academic publications, which highlighted the significance of our work in advancing Bluetooth technology. 
                               </p>
                            </div>
@@ -139,7 +139,7 @@ At Freescale, I was responsible for the creation of various reference designs fo
                            <p>Western Institute of Technology and Higher Education (ITESO)</p>
                            </p>
                            <div class="parent">
-                              <p class="text-muted">
+                              <p class="text-muted" align="justify">
                                  As an undergraduate student, I participated in a research project examining the study of electrostatic fields as stochastic processes in the presence of uncertainty, under the supervision of  <a  class="several" href="https://scholar.google.es/citations?user=ZgvoFhAAAAAJ&hl=es">Dr. Gabriel Gonzales</a>.
                               </p>
                            </div>
