--- a/education.html
+++ b/education.html
@@ -68,7 +68,7 @@
                               <p>Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
                               </p>
                               <p class="text-muted">
-                              <p>Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés</a></p>
+                              <p align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a></p>
                               </p>
                            </div>
                         </div>
@@ -92,13 +92,13 @@
                            <p>Western Institute of Technology and Higher Education (ITESO)</p>
                            </p>
                            <div class="parent">
-                              <p class="text-muted">
-                              <p> Best of his class and graduated with honours</p>
+                              <p class="text-muted" align="justify">
+                              <p> Best of his class and graduated with honours.</p>
                               </p>
                            </div>
                            <div class="parent">
                               <p class="text-muted">
-                              <p>GPA: <span class="color-font">9.93/10.0</span></p>
+                              <p>GPA: <span class="color-font">9.9/10.0</span></p>
                               </p>
                            </div>
                         </div>
