--- a/education.html
+++ b/education.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="timeline-body">
                            <p class="text-muted">
-                           <p>At the University of Zaragoza</p>
+                           <p>University of Zaragoza</p>
                            </p>
                            <div class="parent">
                               <p class="text-muted">
