--- a/education.html
+++ b/education.html
@@ -67,8 +67,7 @@
                               <p class="text-muted">
                               <p>Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
                               </p>
-                              <p class="text-muted">
-                              <p align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a></p>
+                              <p class="text-muted" align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a>
                               </p>
                            </div>
                         </div>
@@ -93,7 +92,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted" align="justify">
-                              <p> Best of his class and graduated with honours.</p>
+                              Best of his class and graduated with honours.
                               </p>
                            </div>
                            <div class="parent">
