--- a/teaching.html
+++ b/teaching.html
@@ -48,7 +48,7 @@
             <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3>
             <hr>
             <br>
-            <b>Computer architecture (Undergraduate level). Principal instructor</b>: This course covers an overview of basic concepts of computer organization and architecture, ranging from some history, the power wall, some instruction set architectures, critical routes, pipeline, cache memory among other topics. The students use Verilog to develop a copy of the classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly.
+            <p align="justify"><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course offers a comprehensive overview of the fundamental concepts of computer organization and architecture, covering a range of topics including the history of computing, the power wall, various instruction set architectures, critical paths, pipeline design, and cache memory. Students apply their knowledge by using Verilog to develop a replica of a classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly language. This hands-on approach provides students with a deeper understanding of the inner workings of computer systems and the interplay between hardware and software.</p>
             <ul>
                <li> Summer 2019</li>
                <li> Spring 2019</li>
@@ -57,7 +57,7 @@
                <li> Autumn 2016</li>
             </ul>
             <br>
-            <b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced embedded systems topics such as real time scheduling, basic kernel development, and advanced peripherals such as USB and Ethernet + TCP/IP. The students mostly worked with the FRDMK64F board.
+            <p align="justify"><b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced topics in embedded systems, including real-time scheduling, basic kernel development, and the use of advanced peripherals like USB and Ethernet with TCP/IP. Students gain hands-on experience with the FRDMK64F board, a platform that offers a comprehensive set of features for the development of a wide range of embedded applications. Through this course, they deepen their understanding of the key concepts and techniques involved in the design and implementation of advanced embedded systems.<p>
             <ul>
                <li> Autumn 2018</li>
                <li> Spring 2018</li>
@@ -67,18 +67,18 @@
             <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3>
             <hr>
             <br>
-            <b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.			
+            <p align="justify"><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.<p>
             <ul>
                <li> Autumn 2018</li>
                <li> Autumn 2016</li>
             </ul>
             <br>
-            <b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.					
+            <p align="justify"><b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.<p>
             <ul>
                <li> Spring 2017</li>
             </ul>
             <br>
-            <b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This part of the course covers real time kernel programming in a FRDMF64F board.
+            <p align="justify"><b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This segment of the course explores the fundamental principles of real-time kernel programming using the FRDMK64F board as a platform.<p>
             <ul>
                <li> Autumn 2017</li>
             </ul>
