--- a/education.html
+++ b/education.html
@@ -56,7 +56,7 @@
                         <div class="timeline-heading">
                            <h4>2019 - Today</h4>
                            <h3>
-                              <p class="blue-text"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
+                              <p class="blue-text" align="justify"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
                            </h3>
                         </div>
                         <div class="timeline-body">
@@ -65,7 +65,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                              <p>Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
+                              <p align="justify">Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
                               </p>
                               <p class="text-muted" align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a>
                               </p>
@@ -83,7 +83,7 @@
                         <div class="timeline-heading">
                            <h4>2012 - 2015</h4>
                            <h4 class="subheading">
-                              <p class="blue-text"><span class="big">Bachelor in Electrical Engineering</span></p>
+                              <p class="blue-text" align="justify"><span class="big">Bachelor in Electrical Engineering</span></p>
                            </h4>
                         </div>
                         <div class="timeline-body">
