--- a/patents.html
+++ b/patents.html
@@ -178,7 +178,7 @@
                <div class="col-lg-4">
                   <h4>About</h4>
                   <div class="hline-w"></div>
-                  <p>This is a website based in several free jekyll templates available to publicize the trajectory of Rodrigo Aldana-López.</p>
+                  <p>This website is built using free Jekyll templates and is aimed at showcasing the professional trajectory of Rodrigo Aldana-López.</p>
                </div>
                <div class="col-lg-4">
                </div>
