--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Rodrigo Aldana-López - Teaching </title>
+      <title> Rodrigo Aldana-López - Publications </title>
       <!-- stylesheets -->
       <link rel="stylesheet" href="/css/site.css">
       <link media="all" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -92,7 +92,7 @@
                <div class="col-lg-4">
                   <h4>About</h4>
                   <div class="hline-w"></div>
-                  <p>This website is built using free Jekyll templates and is aimed at showcasing the professional trajectory of Rodrigo Aldana-López.</p>
+                  <p>This is a website based in several free jekyll templates available to publicize the trajectory of Rodrigo Aldana-López.</p>
                </div>
                <div class="col-lg-4">
                </div>
